# rep-chrome

./: .gitignore  README.md  background.js  manifest.json  package-lock.json  panel.html  panel.js  rep-plus-android.apk
.github/: FUNDING.yml
android/: BUILD.md  BUILD_SUCCESS.md  README.md  WORKSPACE
android/app/: BUILD.bazel
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/web/: android-bridge.js  panel.html
android/app/src/main/assets/web/css/: panel.css
android/app/src/main/assets/web/js/: main.js
android/app/src/main/assets/web/js/modules/: ai.js  bulk-replay.js  network.js  secret-scanner.js  state.js  ui.js
android/app/src/main/kotlin/com/rep/plus/: MainActivity.kt
android/app/src/main/kotlin/com/rep/plus/network/: CaptureService.kt  HttpClient.kt  PCAPdroidReceiver.kt
android/app/src/main/kotlin/com/rep/plus/storage/: RequestDatabase.kt
android/app/src/main/kotlin/com/rep/plus/utils/: PCAPdroidHelper.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  styles.xml
css/: panel.css
js/: main.js
js/core/: events.js  state.js
js/core/utils/: json-formatter.js
js/features/ai/: core.js  explain.js  index.js  suggestions.js
js/features/extractors/: ui.js
js/modules/: ai.js  multi-tab.js  network.js  secret-scanner.js  state.js  ui.js  utils.js
js/network/: capture.js  handler.js  multi-tab.js  url-mapping.js
js/ui/: json-view.js  main-ui.js  request-editor.js  request-list.js  ui-utils.js
tests/: security-headers.test.js
(+8 files in other folders)
